--- a/client/test.html
+++ b/client/test.html
@@ -30,22 +30,18 @@
 		.contextEntry {font-weight:bold; color:darkred; cursor:pointer}
 		
 </style>
-<script src="keycode.js" type="text/javascript"></script>
 <script src="test.js" type="text/javascript"></script>
-<script src="CUserId.js" type="text/javascript"></script>
-<script src="menu.js" type="text/javascript"></script>
-<script src="prototype.js" type="text/javascript"></script>
 </head>
 <body onload="initContextMenus()">
-<input type="button" value="stop" onClick="stop_listen()"></button>
-<input type="button" value="getuser" onClick="getnewid()"></button>
-<input type="button" value="start" onClick="execmachine(1)"></button>
+<input type="button" value="stop" onClick="stop_listen()" />
+<input type="button" value="getuser" onClick="getnewid()" />
+<input type="button" value="start" onClick="execmachine(1)" />
 interval:<input type="text" id="interval" size="10" value="100">
  -- mouse:<input type="text" id="mouseinterval" size="5" value="50">
-<input type="button" value="apply" onClick="change_intervals()"></button>
-<input type="button" value="release" onClick="release()"></button>
-blocklen:<input type="text" id="blocklen" size="5" value="10">
-<input type="button" value="changeblocksize" onClick="changeblocksize()"></button>
+<input type="button" value="apply" onClick="change_intervals()" />
+<input type="button" value="release" onClick="release()" />
+blocklen:<input type="text" id="blocklen" size="5" value="10" />
+<input type="button" value="changeblocksize" onClick="changeblocksize()" />
 <div style = "position: relative;
 			 width: 800px;
 			 height: 600px;
@@ -60,30 +56,6 @@ blocklen:<input type="text" id="blocklen" size="5" value="10">
 				height: 100%;
 				visibility: hidden;"
 				id="failed" src="images/failed.png" />
-</div>
-
-<div id="contextMenu1"
-		class="contextMenus"
-		onclick="hideContextMenus()"
-		onmouseup="execMenu(event)"
-		onmouseover="toggleHighlight(event)"
-		onmouseout="toggleHighlight(event)">
-<table><tbody>
-<tr><td class="menuItem">Merriam-Webster Dictionary</td></tr>
-<tr><td class="menuItem">Merriam-Webster Thesaurus</td></tr>
-</tbody></table>
-</div>
-
-<div id="contextMenu2"
-		class="contextMenus"
-		onclick="hideContextMenus()"
-		onmouseup="execMenu(event)"
-		onmouseover="toggleHighlight(event)"
-		onmouseout="toggleHighlight(event)">
-<table><tbody>
-	<tr><td class="menuItem">Get new userID</td></tr>
-	<tr><td class="menuItem">Execute This Machine</td></tr>
-</tbody></table>
 </div>
 ログウィンドウ<BR>
 <textarea id="logarea" row="4" cols="40"></textarea><br>
