license / restrictions / features upd

--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
                 <p>
                   VoXYは、幅広いクライアントと通信環境をサポートします。
                 </p>
-                <p>
-                  VoXYクライアントは、HTMLとJavascriptのみで書かれており、FlashやJavaApplet等のブラウザ拡張を要求しません。
-                  サーバとの通信は全てHTTPを用いて行われています。
-                  特殊なポートを利用しないので、モバイル回線や企業内LANなどの制約の強い通信環境でも動作することが期待されます。
-                  場合によっては、VNCの通信に制限がかけられている環境でも、VoXYを用いればデスクトップにアクセスすることができます。
-                </p>
+                <ul>
+                  <li>クライアント側はWebブラウザさえあればOKです。</li>
+                  <ul>
+                    <li>クライアントソフトウェアのインストールは要りません</li>
+                    <li>出先で急にアクセスしたくなったときでも、ネットカフェ等から簡単にアクセスできます</li>
+                    <li>ウェブブラウザを備えた端末ならほとんど何でも動作します。Wiiなどのゲーム機や、ネット対応TVなども利用可能</li>
+                  </ul>
+                  <li>クライアントとの通信にはHTTPのみを利用します</li>
+                  <ul>
+                    <li>企業等、制限の強いネットワーク環境下でVNCプロトコルがサポートされていなくても問題ありません</li>
+                  </ul>
+                </ul>
                 <h3>構成</h3>
                 <p>
                   VoXYは、以下のような構成で動作します。
@@ -50,6 +56,12 @@
                 </p>
                 <p>
                   そこで、VoXYではProxyサーバを用いることによって、VNCサーバに代わりにアクセスし、画面やユーザ入力の情報をHTTP経由で提供します。
+                </p>
+                <p>
+                  VoXYクライアントは、HTMLとJavascriptのみで書かれており、FlashやJavaApplet等のブラウザ拡張を要求しません。
+                  サーバとの通信は全てHTTPを用いて行われています。
+                  特殊なポートを利用しないので、モバイル回線や企業内LANなどの制約の強い通信環境でも動作することが期待されます。
+                  場合によっては、VNCの通信に制限がかけられている環境でも、VoXYを用いればデスクトップにアクセスすることができます。
                 </p>
               </div>
             </div>
@@ -81,6 +93,7 @@
                   <ul>
                     <li>Cherrypy (ver. 3.1.2で動作確認)</li>
                     <li>twisted (ver. 10.1.0 / 9.0.0で動作確認)</li>
+                    <li>Python Imaging Library (ver. 1.1.7で動作確認)</li>
                   </ul>
                 </ul>
                 <p>
@@ -164,9 +177,20 @@
                   <img src='images/voxy3.png' width='400' />
                 </p>
                 <p>
-                  この画面では、接続先のホストに対してマウス操作を行うことができます。
-                  (キーボード操作は実装中です)
+                  この画面では、接続先のホストに対してキーボード、:マウス操作を行うことができます。
+                  (一部の特殊キーは動作しません)
                   操作を終えたら、ブラウザの戻るボタンを押すことで、ホスト一覧画面に戻ることができます。
+                </p>
+              </div>
+            </div>
+            <div class='post'>
+              <a name='license' />
+              <h2 class='title'>ライセンス</h2>
+              <div class='entry'>
+                <p>
+                  このソフトウェアは
+                  <a href='https://github.com/ddk50/voxy/blob/master/LICENSE'>MIT License</a>
+                  の下で提供されています。
                 </p>
               </div>
             </div>
@@ -186,6 +210,9 @@
                   </li>
                   <li>
                     <a href='#usage'>使い方</a>
+                  </li>
+                  <li>
+                    <a href='#license'>ライセンス</a>
                   </li>
                 </ul>
               </li>
