--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div class='entry'>
                 <p><strong>VoXY</strong>はWebブラウザベースのVNCクライアント環境です。
                   VoXYを使えば、Webブラウザが使える環境ならどこからでも、あなたのデスクトップにアクセスすることができます。
-                  <object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/Y47yX4JkPsU?hl=ja&fs=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/Y47yX4JkPsU?hl=ja&fs=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
+                  <iframe class="youtube-player" type="text/html" width="425" height="344" src="http://www.youtube.com/embed/Y47yX4JkPsU" frameborder="0"></iframe>
                 </p>
                 <h3>特徴</h3>
                 <p>
